# trading_ai_bot

./: .env.example  .gitignore  README.md  README_NEW.md  SECURITY.md  TODO.md  config.json  debug_mode.py  env.example  historical_data_cli.py  main_legacy.py  pyproject.toml  requirements.txt  run.py  test_historical_data.py
src/trading_ai_bot/: __init__.py  config.py  mcp_config.py  server.py
src/trading_ai_bot/core/: __init__.py  claude_analyzer.py  risk_manager.py  trading_agent.py
src/trading_ai_bot/tools/: README.md  __init__.py
src/trading_ai_bot/tools/analysis_formatter/: __init__.py  tool.py
src/trading_ai_bot/tools/analysis_validator/: __init__.py  tool.py
src/trading_ai_bot/tools/historical_data/: README.md  __init__.py  __main__.py  data_loader.py  data_storage.py  data_validator.py  tool.py
src/trading_ai_bot/tools/market_data/: __init__.py  tool.py
src/trading_ai_bot/tools/mock_analyzer/: __init__.py  tool.py
src/trading_ai_bot/tools/prompt_builder/: __init__.py  tool.py
src/trading_ai_bot/tools/technical_analysis/: __init__.py  tool.py
tests/: __init__.py
tests/historical_data/: __init__.py  cli.py  standalone.py
